<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="2"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/titleº"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:layout_weight="0.60" />

    <Button
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify"
        android:id="@+id/spotify"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/score"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:text="@string/library"
        android:id="@+id/library"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:text="@string/build"
        android:id="@+id/build"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz"
        android:id="@+id/xyz"
        android:layout_gravity="center_horizontal"
        android:background="#F08C35"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:background="#FF0000" />
</LinearLayout>
